objects/Pricing_Template__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Info__c</fullName>
        <label>Legal Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Behalf__c</fullName>
        <label>On Behalf</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Fax__c</fullName>
        <label>Phone/Fax</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Section_1__c</fullName>
        <label>Section 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_2__c</fullName>
        <label>Section 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_3__c</fullName>
        <label>Section 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_for_Group_Entities__c</fullName>
        <label>Title for Group Entities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_for_Pricing_Groups__c</fullName>
        <label>Title for Pricing Groups</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Midcorp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Pricing Template</label>
    <nameField>
        <label>Pricing Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Year_must_be_a_number</fullName>
        <active>true</active>
        <errorConditionFormula>OR(LEN(Year__c) &lt;&gt; 4, NOT(ISNUMBER(Year__c)))</errorConditionFormula>
        <errorDisplayField>Year__c</errorDisplayField>
        <errorMessage>Year must be 4-digit number.</errorMessage>
    </validationRules>
</CustomObject>